- Tab hiding (https://launchpad.net/bugs/938810)
- Sections need locations (https://launchpad.net/bugs/932920)
- Update jQuery to 1.7.1
- custom login screen (https://launchpad.net/bugs/938825)
- Add more options from paster to start-schooltool-instance.
- Updated translations, added Occitan (oc).
- XLS import automatically adds teachers and students to the corresponding groups


Bugfixes
++++++++

- Server tab not highlighted, no breadcrumbs (https://launchpad.net/bugs/868435)
- Make (weekly) schedules only contain schooldays (https://launchpad.net/bugs/930312)
- Prevented duplicated demographics field IDs (https://launchpad.net/bugs/783887)
- Gradebook popup fixes (https://launchpad.net/bugs/886257)

Development tools
+++++++++++++++++

- Selenium testing improvements
- Selenium browser extensions


2.0.2 (2012-02-14)
------------------

- Added integer demographic fields.

Bugfixes
++++++++

- Fixed the password edit view (https://launchpad.net/bugs/868411)
- Allow optional Selection List demographics fields to remain unset (https://launchpad.net/bugs/898219)
- Fixed person edit view to show limited demographics fields (https://launchpad.net/bugs/914609)
- Sorted section list in person accordion (https://launchpad.net/bugs/921373)
- Move 'School name' to the bottom of Customize menu (https://launchpad.net/bugs/876797)
- Restore fill down in gradebook contextual menu (https://launchpad.net/bugs/907907)
- Updated translations.


2.0.1 (2011-12-22)
------------------

- Cannot add resources (https://launchpad.net/bugs/894632)
- Email view needs formatting (https://launchpad.net/bugs/886304)
- Batches missing in several views (https://launchpad.net/bugs/882060)
- Show usernames in every persons table (https://launchpad.net/bugs/897260)
- Many CSS fixes (https://launchpad.net/bugs/885807)
- Many wording and i18n fixes by Douglas Cerna.
- Hide demographics fieldset if it is empty in person add views (https://launchpad.net/bugs/752051)